update-manager (1:0.79) gutsy; urgency=low

  * DistUpgrade/ReleaseAnnouncement:
    - update for the beta release
  * DistUpgrade/DistUpgradeControler.py:
    - fix typo in pre-requists (thanks to Stuart Bishop)
  * debian/control:
    - tighten update-manager depend on update-manager-core

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 26 Sep 2007 17:50:16 +0200

update-manager (1:0.78) gutsy; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - Fix button in conffile dialogue

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 25 Sep 2007 23:09:35 +0100

update-manager (1:0.77) gutsy; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash in conffile dialogue setup

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 25 Sep 2007 14:22:55 +0100

update-manager (1:0.76) gutsy; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeCache.py:
    - ensure that the util-linux -> nfs-common transition
      happens (LP: #141559)

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeViewKDE.py:
    - copy Xauthority file if necessary

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 24 Sep 2007 19:49:17 +0200

update-manager (1:0.75) gutsy; urgency=low

  * DistUpgrade/DistUpgradeViewGtk.py:
    - work around broken vte forkpty() env add
  * DistUpgrade/DistUpgradeControler.py:
    - fix type of installed_demotions from apt.Package to pkgname
      (LP: #144417)
  * po/*.po:
    - updated from latest launchpad translations
  * UpdateManager/DistUpgradeFetcherCore.py:
    - fix missing command line propergation when run as non-root
      (LP: #144451)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 24 Sep 2007 10:52:16 +0200

update-manager (1:0.74) gutsy; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - ensure that users with the "lowlatency" kernel get 
      transitioned correctly to a new kernel (LP: #129458)
  * DistUpgrade/DistUpgradeControler.py:
    - work around kde being too clever in tempdirs (LP: #139319)
  * po/POTFILES.in: