@@ -33,10 +33,30 @@ import shutil
 import sys
 import GnuPGInterface
 from gettext import gettext as _
-try:
-    from utils import country_mirror
-except ImportError:
-    from UpdateManager.Common.utils import country_mirror
+
+def country_mirror():
+  " helper to get the country mirror from the current locale "
+  # special cases go here
+  lang_mirror = { 'C'     : '',
+                }
+  # no lang, no mirror
+  if not os.environ.has_key('LANG'):
+    return ''
+  lang = os.environ['LANG'].lower()
+  # check if it is a special case
+  if lang_mirror.has_key(lang[:5]):
+    return lang_mirror[lang[:5]]
+  # now check for the most comon form (en_US.UTF-8)
+  if "_" in lang:
+    country = lang.split(".")[0].split("_")[1]
+    if "@" in country:
+       country = country.split("@")[0]
+    return country+"."
+  else:
+    return lang[:2]+"."
+  return ''
+
+
 
 class DistUpgradeFetcherCore(object):
     " base class (without GUI) for the upgrade fetcher "
