@@ -103,6 +103,7 @@ libxmlsec1-openssl
 libxt-java-gcj
 mkisofs
 openjade1.3
+openoffice.org-filter-mobiledev
 perlsgml
 pmount
 rcs
