@@ -6,6 +6,8 @@ update-manager (1:0.79) gutsy; urgency=low
     - fix typo in pre-requists (thanks to Stuart Bishop)
   * debian/control:
     - tighten update-manager depend on update-manager-core
+  * UpdateManager/Core/DistUpgradeFetcherCore.py:
+    - move country_mirror code into Core (LP: #145059)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 26 Sep 2007 17:50:16 +0200
 
